# kasto

./: .gitignore  README.md  git_pull  pyproject.toml
config/: logger.yaml
src/: config.py  main.py  schemas.py
src/multi-process/: processing.py
src/ui/: main_win.py
src/utils/: load_config.py  logger.py  singleton.py
